# sherpa

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in
AHADIC++/: Makefile.in
AHADIC++/Decays/: Git_Info.C  Makefile.in  SVN_Info.C
AHADIC++/Formation/: Git_Info.C  Makefile.in  SVN_Info.C
AHADIC++/Main/: Git_Info.C  Makefile.in  SVN_Info.C
AHADIC++/Tools/: Git_Info.C  Gluon_Splitter.C  Hadron_Multiplet.C  Hadronisation_Parameters.C  Makefile.in  SVN_Info.C  Soft_Cluster_Handler.C
AMEGIC++/: Makefile.in
AMEGIC++/Amplitude/: Amplitude_Generator.C  Amplitude_Generator.H  Amplitude_Handler.C  Amplitude_Handler.H  CFColor.C  Git_Info.C  Lorentz_Function.C  Lorentz_Function.H  Lorentz_Functions.C  Makefile.in  SVN_Info.C  Single_Vertex.C  Vertex.C  Zfunc_Generator.C
AMEGIC++/Cluster/: Cluster_Algorithm.C  Git_Info.C  Makefile.in  SVN_Info.C
AMEGIC++/DipoleSubtraction/: DipoleSplitting_Base.C  DipoleSplitting_Base.H  FF_DipoleSplitting.C  FI_DipoleSplitting.C  Git_Info.C  IF_DipoleSplitting.C  II_DipoleSplitting.C  Makefile.in  SVN_Info.C  Single_DipoleTerm.C  (+7 more)
AMISIC++/: Makefile.in
ATOOLS/: Makefile.in
AddOns/: Makefile.in
AddOns/HZTool/: HZTool_Interface.C  Makefile.am  Makefile.in  hztool_sherpa.F
AddOns/MCFM/: MCFM_gb_hb.C  MCFM_gg_h.C  MCFM_gg_hg.C  MCFM_gg_hgg.C  MCFM_gg_yy.C  MCFM_qqb_QQb.C  MCFM_qqb_WW.C  MCFM_qqb_WZ.C  MCFM_qqb_ZZ.C  MCFM_qqb_v.C  MCFM_qqb_vh.C  MCFM_qqb_wgam.C  MCFM_qqb_zgam.C  MCFM_wbf.C  Makefile.am  Makefile.in
BEAM/: Makefile.in
COMIX/: Makefile.in
CSSHOWER++/: Makefile.in
DIRE/: Makefile.in
EXTRA_XS/: Makefile.in
Examples/: Makefile.am  Makefile.in
HADRONS++/: Decaydata.db  Makefile.in
MCATNLO/: Makefile.in
METOOLS/: Makefile.in
MODEL/: Makefile.in
MODEL/UFO/: Git_Info.C  Makefile.am  Makefile.in  SVN_Info.C  Sherpa-generate-model  Sherpa-generate-model.in  UFO_Model.C  UFO_Model.H  UFO_Param_Reader.C  UFO_Param_Reader.H  color_interface.py  lorentz_structures.py  model_template.C  run_card_template  s_lorentz.py  s_vertex.py  sconstruct_template  sconstruct_template.in  write_model.py  write_run_card.py
Manual/: API.texi  Bibliography.texi  Examples.texi  Fragmentation.texi  HardDecays.texi  Introduction.texi  LHC_HInt.texi  LHC_HJets.texi  LHC_TTBar.texi  LHC_WJets.texi  LHC_ZJets.texi  ME.texi  ME2.texi  Makefile.am  Makefile.in  Merging.texi  Processes.texi  Run.texi  ScaleVars.texi  Selector.texi  Sherpa.html  Sherpa.info  Sherpa.info-1  Sherpa.info-2  Shower.texi  UFO.texi  completion.index  sherpa-completion  stamp-vti  version.texi
PDF/: Makefile.in
PDF/NNPDF/: Git_Info.C  Makefile.am  Makefile.in  PDF_NN.C  SVN_Info.C
PHASIC++/: Makefile.in
PHOTONS++/: Makefile.in
SHERPA/: Makefile.in
SHRiMPS/: Makefile.in
m4/: acinclude.m4
(+519 files in other folders)
